<resources>
    <string name="app_name">PlacarApp</string>
    <string name="label_titulo">Times</string>
    <string name="developer">Desenvolvido por: Hermivaldo Braga</string>
    <string name="time_1">Time 1</string>
    <string name="time_2">Time 2</string>
    <string name="nm_time1">Insira o nome do primeiro time</string>
    <string name="nm_time2">Insira o nome do segundo time</string>
    <string name="tx_btn">Jogar</string>
    <string name="title_activity_game">GameActivity</string>
</resources>
