<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.hermivaldo.placarapp.MainActivity">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_titulo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/developer"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ln_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvDeveloper"
        android:layout_below="@+id/tvTime"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/time_1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14px"
            android:hint="@string/nm_time1"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/time_2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14px"
            android:hint="@string/nm_time2"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:layout_above="@id/tvDeveloper"
        android:layout_alignParentRight="true"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/round_button"
        android:text="@string/tx_btn"
        android:textColor="@color/icons"
        android:onClick="comecarJogo"/>

</RelativeLayout>
